# PWCode

./: .gitattributes  .gitignore  README.md  config.template.yml  pyproject.toml  requirements.txt
scripts/: bat_data.py  cycles.py  git.py
src/: __main__.py  _archive.py  _copy.py  _edit.py  _script.py  _sql.py  _sqlite.py  config.py  configdb.py  db.py  dp.py  gui.py  installers.py  jdbc.py  main.py  project.py  run_statistics.py  sqlwb.py
src/examples/: bat_data.py
src/install/: funcs.py  run.py
src/utils/: _dict.py  _file.py  _java.py  _text.py
