[project]
name = "pwcode"
version = "0.1"
authors = [
    {name = "Morten Eek", email = "mortenee@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = ["License :: OSI Approved :: GNU General Public License v3 (GPLv3)"]

dependencies = [
	"blake3==0.3.3",
	"psutil==5.9.5",
	"toposort==1.10",
	"flake8==6.1.0",
	"rich-argparse==1.3.0",
	"openpyxl==3.1.2",
	"sqlalchemy==1.4.32",
	"command_runner==1.4.0",
	"pathvalidate==3.1.0",
	"jpype1==1.4.1",
	"JayDeBeApi==1.2.3",
	"sqlite-utils==3.35",
	"PyYAML==6.0",
	"frictionless[sql]==5.15.10",
	"install-jdk==1.1.0",
	"maven-artifact==0.3.3",
	"dulwich==0.21.5",
	"yapf==0.40.1",
]
